--- a/styles.css
+++ b/styles.css
@@ -7,9 +7,10 @@ body {
     background-image: url('images/background.jpg');
     background-repeat: no-repeat;
     background-position: center;
+    background-attachment: fixed;
     background-size: cover;
     user-select: none;
-    height: 86vh;
+    height: 100vh;
 }
 
 .text {
@@ -133,7 +134,7 @@ body {
     padding: 20px;
     border-radius: 10px;
     text-align: center;
-    margin-top: 50px;
+    margin-top: auto;
 }
 
 .footer {
