--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     font-family: Arial, sans-serif;
     background-image: url('images/background.jpg');
@@ -138,7 +138,8 @@ html, body {
     padding: 10px;
     border-radius: 5px;
     text-align: center;
-    margin-top: auto;
+    margin-top: 20px;
+    margim-bottom: 20px;
 }
 
 .footer {
@@ -146,6 +147,7 @@ html, body {
     text-align: center;
     margin-top: 10px;
     padding: 20px;
+    min-height: 100px
 }
 
 .btn-donation {
