--- a/styles.css
+++ b/styles.css
@@ -201,6 +201,7 @@ html, body {
 
 .accordion-body {
     background: rgba(0, 0, 0, 0.7) !important;
+    border-radius: 5px;
     color: white;
 }
 
